--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+.card {
+  width: 18rem;
+  margin: 1rem;
+}
+
+.card img {
+  width: 100%;
+  height: auto; 
+}
+
+.card-body {
+  padding: 1rem;
+}
+
+.card-title {
+  margin-bottom: .5rem;
+}
+
+.card-text {
+  font-size: 0.9rem;
+}
+
 .App {
-  text-align: center;
+  padding-bottom: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.component-background {
+  background-image: url('../src/comps/photo/bg.jpg');
+  flex-wrap: wrap;
+  background-size: cover; 
+  align-items: flex-start;
+  position: relative;
+  background-position: center; 
+  color: #fff; 
+  height: 100vh; 
+  overflow: auto; 
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
